Update 'rku1lava3-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:2a213a434e604be0d8c984df88acf244348aedda@sha256:2c2862429503c63c5601c0e031a3351cb4c44c533bd5da3bc09d13a2a4756533

--- a/components/rku1lava3-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/rku1lava3-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rku1lava3-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:2a213a434e604be0d8c984df88acf244348aedda@sha256:2c2862429503c63c5601c0e031a3351cb4c44c533bd5da3bc09d13a2a4756533
+          name: container-image
